修改了线程类型，使用虚拟线程降低线程创建开销。现在需要Java 21及以上才可使用。